--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --ext .js src",
     "lint:fix": "eslint --ext .js src --fix",
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "addClient":"cp -r ./client/dist public"
   },
   "keywords": [],
   "author": "",
