--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "dotenv": "^16.0.3",
     "framer-motion": "^8.5.2",
+    "pnpm": "^7.26.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
