--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint --ext .js src",
     "lint:fix": "eslint --ext .js src --fix",
     "start": "nodemon src/index.js",
-    "addClient":"cp -r ./client/dist public"
+    "addClient": "cp -r ./client/dist public"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +17,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pnpm": "^7.26.3"
   },
   "devDependencies": {
     "eslint": "^8.32.0"
